Add `IPPH`/`APPH` localization override for `a`/`g`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2185,6 +2185,7 @@ selectorAffix.a = "doubleStorey"
 selectorAffix."a/sansSerif" = "doubleStorey"
 selectorAffix."aRetroflexHook" = "doubleStorey"
 selectorAffix."a/doubleStorey" = "doubleStorey"
+selectorAffix."aRetroflexHook/doubleStorey" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "singleStorey"
@@ -2199,6 +2200,7 @@ selectorAffix.a = "singleStorey"
 selectorAffix."a/sansSerif" = "singleStorey"
 selectorAffix."aRetroflexHook" = "singleStorey"
 selectorAffix."a/doubleStorey" = "doubleStorey"
+selectorAffix."aRetroflexHook/doubleStorey" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "singleStorey"
@@ -2216,6 +2218,7 @@ selectorAffix.a = ""
 selectorAffix."a/sansSerif" = ""
 selectorAffix."aRetroflexHook" = ""
 selectorAffix."a/doubleStorey" = ""
+selectorAffix."aRetroflexHook/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = ""
@@ -2230,6 +2233,7 @@ selectorAffix.a = "hookInwardSerifed"
 selectorAffix."a/sansSerif" = ""
 selectorAffix."aRetroflexHook" = "hookInwardSerifed"
 selectorAffix."a/doubleStorey" = "hookInwardSerifed"
+selectorAffix."aRetroflexHook/doubleStorey" = "hookInwardSerifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = ""
@@ -2246,6 +2250,7 @@ selectorAffix.a = ""
 selectorAffix."a/sansSerif" = ""
 selectorAffix."aRetroflexHook" = ""
 selectorAffix."a/doubleStorey" = ""
+selectorAffix."aRetroflexHook/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = ""
@@ -2259,6 +2264,7 @@ selectorAffix.a = "topCut"
 selectorAffix."a/sansSerif" = "topCut"
 selectorAffix."aRetroflexHook" = "topCut"
 selectorAffix."a/doubleStorey" = ""
+selectorAffix."aRetroflexHook/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "topCut"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "topCut"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topCut"
@@ -2272,6 +2278,7 @@ selectorAffix.a = "earlessCorner"
 selectorAffix."a/sansSerif" = "earlessCorner"
 selectorAffix."aRetroflexHook" = "earlessCorner"
 selectorAffix."a/doubleStorey" = ""
+selectorAffix."aRetroflexHook/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessCorner"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "earlessCorner"
@@ -2285,6 +2292,7 @@ selectorAffix.a = "earlessRounded"
 selectorAffix."a/sansSerif" = "earlessRounded"
 selectorAffix."aRetroflexHook" = "earlessRounded"
 selectorAffix."a/doubleStorey" = ""
+selectorAffix."aRetroflexHook/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessRounded"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "earlessRounded"
@@ -2299,6 +2307,7 @@ selectorAffix.a = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "serifless"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "serifless"
@@ -2312,6 +2321,7 @@ selectorAffix.a = "serifed"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "serifed"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifed"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "topSerifed", else = "serifless" }
@@ -2326,6 +2336,7 @@ selectorAffix.a = "doubleSerifed"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."aRetroflexHook" = "topSerifed"
 selectorAffix."a/doubleStorey" = "serifed"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "doubleSerifed"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
@@ -2339,6 +2350,7 @@ selectorAffix.a = "tailed"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "tailed"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "tailedSerifed", else = "tailed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailed"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "topSerifed", else = "serifless" }
@@ -2353,6 +2365,7 @@ selectorAffix.a = "tailedSerifed"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."aRetroflexHook" = "topSerifed"
 selectorAffix."a/doubleStorey" = "tailed"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "tailedSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailedSerifed"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
@@ -2367,6 +2380,7 @@ selectorAffix.a = "toothlessCorner"
 selectorAffix."a/sansSerif" = "toothlessCorner"
 selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "toothlessCorner"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
@@ -2381,6 +2395,7 @@ selectorAffix.a = "toothlessRounded"
 selectorAffix."a/sansSerif" = "toothlessRounded"
 selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "toothlessRounded"
+selectorAffix."aRetroflexHook/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
@@ -2835,6 +2850,7 @@ descriptionAffix = "double-storey shape"
 selectorAffix.g = "doubleStorey"
 selectorAffix."g/sansSerif" = "doubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreyBentHookSerifless"
+selectorAffix."g/doubleStorey" = "doubleStorey"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "singleStoreyBentHookSerifed"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "singleStoreyBentHookSerifless"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "singleStoreyBentHookSerifed"
@@ -2849,6 +2865,7 @@ keyAffix = ""
 selectorAffix.g = "closed"
 selectorAffix."g/sansSerif" = "closed"
 selectorAffix."g/hookTopBase" = ""
+selectorAffix."g/doubleStorey" = "closed"
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = ""
@@ -2860,6 +2877,7 @@ descriptionAffix = "open contour"
 selectorAffix.g = "open"
 selectorAffix."g/sansSerif" = "open"
 selectorAffix."g/hookTopBase" = ""
+selectorAffix."g/doubleStorey" = "open"
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = ""
@@ -2872,6 +2890,7 @@ descriptionAffix = "single-storey shape"
 selectorAffix.g = "singleStorey"
 selectorAffix."g/sansSerif" = "singleStorey"
 selectorAffix."g/hookTopBase" = "singleStorey"
+selectorAffix."g/doubleStorey" = "doubleStoreyClosed"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "singleStorey"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "singleStorey"
@@ -2886,6 +2905,7 @@ keyAffix = ""
 selectorAffix.g = "bentHook"
 selectorAffix."g/sansSerif" = "bentHook"
 selectorAffix."g/hookTopBase" = "bentHook"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "bentHook"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "bentHook"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "bentHook"
@@ -2897,6 +2917,7 @@ descriptionAffix = "flat bottom hook"
 selectorAffix.g = "flatHook"
 selectorAffix."g/sansSerif" = "flatHook"
 selectorAffix."g/hookTopBase" = "flatHook"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "flatHook"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "flatHook"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "bentHook"
@@ -2907,6 +2928,7 @@ rank = 1
 selectorAffix.g = "serifless"
 selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "serifless"
@@ -2918,6 +2940,7 @@ descriptionAffix = "top-right serif"
 selectorAffix.g = "serifed"
 selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "serifed"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "serifed"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "serifed"
@@ -2929,6 +2952,7 @@ descriptionAffix = "a diagonal cut at top"
 selectorAffix.g = "topCut"
 selectorAffix."g/sansSerif" = "topCut"
 selectorAffix."g/hookTopBase" = "serifless"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "topCut"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "topCut"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "topCut"
@@ -2940,6 +2964,7 @@ descriptionAffix = "earless (cornered top-right)"
 selectorAffix.g = "earlessCorner"
 selectorAffix."g/sansSerif" = "earlessCorner"
 selectorAffix."g/hookTopBase" = "earlessCornerHTB"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "earlessCorner"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "earlessCorner"
@@ -2951,6 +2976,7 @@ descriptionAffix = "earless (rounded top-right)"
 selectorAffix.g = "earlessRounded"
 selectorAffix."g/sansSerif" = "earlessRounded"
 selectorAffix."g/hookTopBase" = "serifless"
+selectorAffix."g/doubleStorey" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "earlessRounded"
 selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "earlessRounded"
