--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1476,6 +1476,12 @@ groupRank = 2
 description = "`Q` with open contour and swash-y shape"
 selector.Q = "openSwash"
 
+[prime.capital-q.variants.closed-swash]
+rank = 11
+groupRank = 2
+description = "`Q` with a swashy tail"
+selector.Q = "closedSwash"
+
 
 
 [prime.capital-r]
