Refine shape of Latin Lower FFI.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2726,6 +2726,7 @@ selectorAffix."f/sansSerif" = ""
 selectorAffix."f/compLigLeft1" = "flatHookCLC1"
 selectorAffix."f/compLigLeft2" = "flatHookCLC2"
 selectorAffix."f/compLigLeft3" = "flatHookCLC3"
+selectorAffix."f/compLigLeft4" = "flatHookCLC4"
 selectorAffix."f/phoneticLeft" = ""
 selectorAffix."f/tailless" = ""
 selectorAffix.fLenis = ""
@@ -2739,6 +2740,7 @@ selectorAffix."f/sansSerif" = "flatHook"
 selectorAffix."f/compLigLeft1" = "flatHookCLC1"
 selectorAffix."f/compLigLeft2" = "flatHookCLC2"
 selectorAffix."f/compLigLeft3" = "flatHookCLC3"
+selectorAffix."f/compLigLeft4" = "flatHookCLC4"
 selectorAffix."f/phoneticLeft" = "flatHook"
 selectorAffix."f/tailless" = "flatHook"
 selectorAffix.fLenis = "flatHook"
@@ -2756,6 +2758,7 @@ selectorAffix."f/sansSerif" = "serifless"
 selectorAffix."f/compLigLeft1" = "serifless"
 selectorAffix."f/compLigLeft2" = "serifless"
 selectorAffix."f/compLigLeft3" = "serifless"
+selectorAffix."f/compLigLeft4" = "serifless"
 selectorAffix."f/phoneticLeft" = "serifless"
 selectorAffix."f/tailless" = "serifless"
 selectorAffix.fLenis = "serifless"
@@ -2769,6 +2772,7 @@ selectorAffix."f/sansSerif" = "serifless"
 selectorAffix."f/compLigLeft1" = "serifed"
 selectorAffix."f/compLigLeft2" = "serifed"
 selectorAffix."f/compLigLeft3" = "serifed"
+selectorAffix."f/compLigLeft4" = "serifed"
 selectorAffix."f/phoneticLeft" = "serifed"
 selectorAffix."f/tailless" = "serifed"
 selectorAffix.fLenis = "serifless"
@@ -2782,6 +2786,7 @@ selectorAffix."f/sansSerif" = "extended"
 selectorAffix."f/compLigLeft1" = "extended"
 selectorAffix."f/compLigLeft2" = "extended"
 selectorAffix."f/compLigLeft3" = "extended"
+selectorAffix."f/compLigLeft4" = "extended"
 selectorAffix."f/phoneticLeft" = "extended"
 selectorAffix."f/tailless" = "serifless"
 selectorAffix.fLenis = "serifless"
@@ -2795,6 +2800,7 @@ selectorAffix."f/sansSerif" = "tailed"
 selectorAffix."f/compLigLeft1" = "tailed"
 selectorAffix."f/compLigLeft2" = "tailed"
 selectorAffix."f/compLigLeft3" = "tailed"
+selectorAffix."f/compLigLeft4" = "tailed"
 selectorAffix."f/phoneticLeft" = "tailed"
 selectorAffix."f/tailless" = "serifless"
 selectorAffix.fLenis = "serifless"
@@ -2808,6 +2814,7 @@ selectorAffix."f/sansSerif" = "diagonalTailed"
 selectorAffix."f/compLigLeft1" = "diagonalTailed"
 selectorAffix."f/compLigLeft2" = "diagonalTailed"
 selectorAffix."f/compLigLeft3" = "diagonalTailed"
+selectorAffix."f/compLigLeft4" = "diagonalTailed"
 selectorAffix."f/phoneticLeft" = "diagonalTailed"
 selectorAffix."f/tailless" = "serifless"
 selectorAffix.fLenis = "serifless"
@@ -2819,8 +2826,9 @@ keyAffix = ""
 selectorAffix.f = ""
 selectorAffix."f/sansSerif" = ""
 selectorAffix."f/compLigLeft1" = "crossbarAtXHeight"
-selectorAffix."f/compLigLeft2" = ""
+selectorAffix."f/compLigLeft2" = "crossbarAtXHeight"
 selectorAffix."f/compLigLeft3" = ""
+selectorAffix."f/compLigLeft4" = ""
 selectorAffix."f/phoneticLeft" = "crossbarAtXHeight"
 selectorAffix."f/tailless" = ""
 selectorAffix.fLenis = ""
@@ -2832,8 +2840,9 @@ descriptionAffix = "crossbar at X-height"
 selectorAffix.f = "crossbarAtXHeight"
 selectorAffix."f/sansSerif" = "crossbarAtXHeight"
 selectorAffix."f/compLigLeft1" = "crossbarAtXHeight"
-selectorAffix."f/compLigLeft2" = ""
+selectorAffix."f/compLigLeft2" = "crossbarAtXHeight"
 selectorAffix."f/compLigLeft3" = ""
+selectorAffix."f/compLigLeft4" = ""
 selectorAffix."f/phoneticLeft" = "crossbarAtXHeight"
 selectorAffix."f/tailless" = "crossbarAtXHeight"
 selectorAffix.fLenis = "crossbarAtXHeight"
@@ -4892,7 +4901,7 @@ rank = 3
 descriptionAffix = "serifs"
 selectorAffix.w = "serifed"
 selectorAffix."w/sansSerif" = "serifless"
-selectorAffix.wHookTop = "serifed"
+selectorAffix.wHookTop = { if = [{ body = "straight-double-v" }, { body = "straight-asymmetric" }], then = "motionSerifed", else = "serifed" }
 
 
 
