w flat top variants

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1845,7 +1845,7 @@ selectorAffix.WHookTop = "straight"
 [prime.capital-w.variants-buildup.stages.body.straight-almost-flat-top]
 rank = 2
 groupRank = 1
-descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
+descriptionAffix = "straight body shape that the middle is almost aligned the top"
 selectorAffix.W = "straightAlmostFlatTop"
 selectorAffix."W/sansSerif" = "straightAlmostFlatTop"
 selectorAffix.WHookTop = "straightAlmostFlatTop"
@@ -1874,7 +1874,6 @@ selectorAffix.W = "straightAsymmetric"
 selectorAffix."W/sansSerif" = "straightAsymmetric"
 selectorAffix.WHookTop = "straightAsymmetric"
 
-
 [prime.capital-w.variants-buildup.stages.body.straight-vertical-sides]
 rank = 6
 groupRank = 3
@@ -1883,21 +1882,45 @@ selectorAffix.W = "straightVerticalSides"
 selectorAffix."W/sansSerif" = "straightVerticalSides"
 selectorAffix.WHookTop = "straightVerticalSides"
 
-[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides]
+[prime.capital-w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
 rank = 7
+groupRank = 3
+descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
+selectorAffix.W = "straightVerticalSidesFlatTop"
+selectorAffix."W/sansSerif" = "straightVerticalSidesFlatTop"
+selectorAffix.WHookTop = "straightVerticalSidesFlatTop"
+
+[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides]
+rank = 8
 groupRank = 3
 descriptionAffix = "rounded body shape with vertical sides"
 selectorAffix.W = "roundedVerticalSides"
 selectorAffix."W/sansSerif" = "roundedVerticalSides"
 selectorAffix.WHookTop = "roundedVerticalSides"
 
+[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides-flat-top]
+rank = 9
+groupRank = 3
+descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
+selectorAffix.W = "roundedVerticalSidesFlatTop"
+selectorAffix."W/sansSerif" = "roundedVerticalSidesFlatTop"
+selectorAffix.WHookTop = "roundedVerticalSidesFlatTop"
+
 [prime.capital-w.variants-buildup.stages.body.curly]
-rank = 8
+rank = 10
 groupRank = 3
 descriptionAffix = "curly body"
 selectorAffix.W = "curly"
 selectorAffix."W/sansSerif" = "curly"
 selectorAffix.WHookTop = "curly"
+
+[prime.capital-w.variants-buildup.stages.body.curly-flat-top]
+rank = 11
+groupRank = 3
+descriptionAffix = "curly body with a middle stem aligned to the top"
+selectorAffix.W = "curlyFlatTop"
+selectorAffix."W/sansSerif" = "curlyFlatTop"
+selectorAffix.WHookTop = "curlyFlatTop"
 
 [prime.capital-w.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4856,24 +4879,48 @@ selectorAffix.w = "straightVerticalSides"
 selectorAffix."w/sansSerif" = "straightVerticalSides"
 selectorAffix.wHookTop = "straightVerticalSides"
 
-[prime.w.variants-buildup.stages.body.rounded-vertical-sides]
+[prime.w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
 rank = 7
+groupRank = 3
+descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
+selectorAffix.w = "straightVerticalSidesFlatTop"
+selectorAffix."w/sansSerif" = "straightVerticalSidesFlatTop"
+selectorAffix.wHookTop = "straightVerticalSidesFlatTop"
+
+[prime.w.variants-buildup.stages.body.rounded-vertical-sides]
+rank = 8
 groupRank = 3
 descriptionAffix = "rounded body shape with vertical sides"
 selectorAffix.w = "roundedVerticalSides"
 selectorAffix."w/sansSerif" = "roundedVerticalSides"
 selectorAffix.wHookTop = "roundedVerticalSides"
 
+[prime.w.variants-buildup.stages.body.rounded-vertical-sides-flat-top]
+rank = 9
+groupRank = 3
+descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
+selectorAffix.w = "roundedVerticalSidesFlatTop"
+selectorAffix."w/sansSerif" = "roundedVerticalSidesFlatTop"
+selectorAffix.wHookTop = "roundedVerticalSidesFlatTop"
+
 [prime.w.variants-buildup.stages.body.curly]
-rank = 8
-groupRank = 4
+rank = 10
+groupRank = 3
 descriptionAffix = "curly body"
 selectorAffix.w = "curly"
 selectorAffix."w/sansSerif" = "curly"
 selectorAffix.wHookTop = "curly"
 
+[prime.w.variants-buildup.stages.body.curly-flat-top]
+rank = 11
+groupRank = 3
+descriptionAffix = "curly body with a middle stem aligned to the top"
+selectorAffix.w = "curlyFlatTop"
+selectorAffix."w/sansSerif" = "curlyFlatTop"
+selectorAffix.wHookTop = "curlyFlatTop"
+
 [prime.w.variants-buildup.stages.body.cursive]
-rank = 9
+rank = 12
 groupRank = 4
 descriptionAffix = "cursive shape"
 selectorAffix.w = "cursive"
