--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1885,6 +1885,7 @@ selectorAffix.WHookTop = "straightVerticalSides"
 [prime.capital-w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
 rank = 7
 groupRank = 3
+nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.W = "straightVerticalSidesFlatTop"
 selectorAffix."W/sansSerif" = "straightVerticalSidesFlatTop"
@@ -1901,6 +1902,7 @@ selectorAffix.WHookTop = "roundedVerticalSides"
 [prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides-flat-top]
 rank = 9
 groupRank = 3
+nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.W = "roundedVerticalSidesFlatTop"
 selectorAffix."W/sansSerif" = "roundedVerticalSidesFlatTop"
@@ -1917,6 +1919,7 @@ selectorAffix.WHookTop = "curly"
 [prime.capital-w.variants-buildup.stages.body.curly-flat-top]
 rank = 11
 groupRank = 3
+nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem aligned to the top"
 selectorAffix.W = "curlyFlatTop"
 selectorAffix."W/sansSerif" = "curlyFlatTop"
@@ -4882,6 +4885,7 @@ selectorAffix.wHookTop = "straightVerticalSides"
 [prime.w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
 rank = 7
 groupRank = 3
+nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.w = "straightVerticalSidesFlatTop"
 selectorAffix."w/sansSerif" = "straightVerticalSidesFlatTop"
@@ -4898,6 +4902,7 @@ selectorAffix.wHookTop = "roundedVerticalSides"
 [prime.w.variants-buildup.stages.body.rounded-vertical-sides-flat-top]
 rank = 9
 groupRank = 3
+nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.w = "roundedVerticalSidesFlatTop"
 selectorAffix."w/sansSerif" = "roundedVerticalSidesFlatTop"
@@ -4914,6 +4919,7 @@ selectorAffix.wHookTop = "curly"
 [prime.w.variants-buildup.stages.body.curly-flat-top]
 rank = 11
 groupRank = 3
+nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem aligned to the top"
 selectorAffix.w = "curlyFlatTop"
 selectorAffix."w/sansSerif" = "curlyFlatTop"
