--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1916,8 +1916,17 @@ selectorAffix.W = "curly"
 selectorAffix."W/sansSerif" = "curly"
 selectorAffix.WHookTop = "curly"
 
-[prime.capital-w.variants-buildup.stages.body.curly-flat-top]
+[prime.capital-w.variants-buildup.stages.body.curly-almost-flat-top]
 rank = 11
+groupRank = 3
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "curly body shape that the middle is almost aligned the top"
+selectorAffix.W = "curlyAlmostFlatTop"
+selectorAffix."W/sansSerif" = "curlyAlmostFlatTop"
+selectorAffix.WHookTop = "curlyAlmostFlatTop"
+
+[prime.capital-w.variants-buildup.stages.body.curly-flat-top]
+rank = 12
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem aligned to the top"
@@ -4845,7 +4854,7 @@ selectorAffix.wHookTop = "straight"
 [prime.w.variants-buildup.stages.body.straight-almost-flat-top]
 rank = 2
 groupRank = 1
-descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
+descriptionAffix = "straight body shape that the middle is almost aligned the top"
 selectorAffix.w = "straightAlmostFlatTop"
 selectorAffix."w/sansSerif" = "straightAlmostFlatTop"
 selectorAffix.wHookTop = "straightAlmostFlatTop"
@@ -4916,8 +4925,17 @@ selectorAffix.w = "curly"
 selectorAffix."w/sansSerif" = "curly"
 selectorAffix.wHookTop = "curly"
 
-[prime.w.variants-buildup.stages.body.curly-flat-top]
+[prime.w.variants-buildup.stages.body.curly-almost-flat-top]
 rank = 11
+groupRank = 3
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "curly body shape that the middle is almost aligned the top"
+selectorAffix.w = "curlyAlmostFlatTop"
+selectorAffix."w/sansSerif" = "curlyAlmostFlatTop"
+selectorAffix.wHookTop = "curlyAlmostFlatTop"
+
+[prime.w.variants-buildup.stages.body.curly-flat-top]
+rank = 12
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem aligned to the top"
@@ -4926,7 +4944,7 @@ selectorAffix."w/sansSerif" = "curlyFlatTop"
 selectorAffix.wHookTop = "curlyFlatTop"
 
 [prime.w.variants-buildup.stages.body.cursive]
-rank = 12
+rank = 13
 groupRank = 4
 descriptionAffix = "cursive shape"
 selectorAffix.w = "cursive"
