--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1886,7 +1886,7 @@ selectorAffix.WHookTop = "straightVerticalSides"
 rank = 7
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "straight body shape with vertical sides, with a middle stem aligned to the top"
+descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.W = "straightVerticalSidesFlatTop"
 selectorAffix."W/sansSerif" = "straightVerticalSidesFlatTop"
 selectorAffix.WHookTop = "straightVerticalSidesFlatTop"
@@ -1903,7 +1903,7 @@ selectorAffix.WHookTop = "roundedVerticalSides"
 rank = 9
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "rounded body shape with vertical sides, with a middle stem aligned to the top"
+descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.W = "roundedVerticalSidesFlatTop"
 selectorAffix."W/sansSerif" = "roundedVerticalSidesFlatTop"
 selectorAffix.WHookTop = "roundedVerticalSidesFlatTop"
@@ -1920,7 +1920,7 @@ selectorAffix.WHookTop = "curly"
 rank = 11
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "curly body, with a middle stem almost aligned to the top"
+descriptionAffix = "curly body with a middle stem almost aligned to the top"
 selectorAffix.W = "curlyAlmostFlatTop"
 selectorAffix."W/sansSerif" = "curlyAlmostFlatTop"
 selectorAffix.WHookTop = "curlyAlmostFlatTop"
@@ -1929,7 +1929,7 @@ selectorAffix.WHookTop = "curlyAlmostFlatTop"
 rank = 12
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "curly body, with a middle stem aligned to the top"
+descriptionAffix = "curly body with a middle stem aligned to the top"
 selectorAffix.W = "curlyFlatTop"
 selectorAffix."W/sansSerif" = "curlyFlatTop"
 selectorAffix.WHookTop = "curlyFlatTop"
@@ -4895,7 +4895,7 @@ selectorAffix.wHookTop = "straightVerticalSides"
 rank = 7
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "straight body shape with vertical sides, with a middle stem aligned to the top"
+descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.w = "straightVerticalSidesFlatTop"
 selectorAffix."w/sansSerif" = "straightVerticalSidesFlatTop"
 selectorAffix.wHookTop = "straightVerticalSidesFlatTop"
@@ -4912,7 +4912,7 @@ selectorAffix.wHookTop = "roundedVerticalSides"
 rank = 9
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "rounded body shape with vertical sides, with a middle stem aligned to the top"
+descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
 selectorAffix.w = "roundedVerticalSidesFlatTop"
 selectorAffix."w/sansSerif" = "roundedVerticalSidesFlatTop"
 selectorAffix.wHookTop = "roundedVerticalSidesFlatTop"
@@ -4929,7 +4929,7 @@ selectorAffix.wHookTop = "curly"
 rank = 11
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "curly body, with a middle stem almost aligned to the top"
+descriptionAffix = "curly body with a middle stem almost aligned to the top"
 selectorAffix.w = "curlyAlmostFlatTop"
 selectorAffix."w/sansSerif" = "curlyAlmostFlatTop"
 selectorAffix.wHookTop = "curlyAlmostFlatTop"
@@ -4938,7 +4938,7 @@ selectorAffix.wHookTop = "curlyAlmostFlatTop"
 rank = 12
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
-descriptionAffix = "curly body, with a middle stem aligned to the top"
+descriptionAffix = "curly body with a middle stem aligned to the top"
 selectorAffix.w = "curlyFlatTop"
 selectorAffix."w/sansSerif" = "curlyFlatTop"
 selectorAffix.wHookTop = "curlyFlatTop"
